--- a/react-app/src/components/habitOrDailyEllipsisMenu/ellipsis.css
+++ b/react-app/src/components/habitOrDailyEllipsisMenu/ellipsis.css
@@ -2,9 +2,9 @@
     width: 100%;
     height: 100%;
     display: flex;
+    position: relativel;
     align-items: center;
     justify-content: center;
-    z-index:600;
 }
 
 .ellipsa {
